--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "this is demo how to build webpack2",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build":"rimraf dist && webpack ./src/index.js ./dist/bundle.js --watch"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/wecandothis/webpack2#readme",
   "devDependencies": {
+    "rimraf": "^2.6.1",
     "webpack": "^2.6.1"
   }
 }
